improved overall fonts and small changes to ui

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 /* Force update ant style */
-.ant-input {
-  padding: 20px 12px 6px 11px;
-}
+// .ant-input {
+//   padding: 20px 12px 6px 11px;
+// }
 
 .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
   background-color: #f0f0f0;
