Finish product and logout logic

--- a/src/components/controls/FloatLabel/FloatLabel.scss
+++ b/src/components/controls/FloatLabel/FloatLabel.scss
@@ -1,6 +1,19 @@
 .float-label {
   position: relative;
   margin-bottom: 0.5rem;
+
+  /* Force update ant style */
+  .ant-input {
+    padding: 20px 12px 6px 11px;
+  }
+
+  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+    background-color: #f0f0f0;
+  }
+
+  .anticon {
+    vertical-align: 0.125rem;
+  }
 }
 
 .label {
